# Ticket_System

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run_test.sh
BPlusTree/: bplus.cpp  bplus.h  file_manager.cpp  file_manager.h  main.cpp  rubbish_bin.h  string.h  utility.h
src/: account.h  calendar.h  header.h  main.cpp  parser.h  ticket_system.h  utility.h
src/basic/: account.h  order.h  time.h  train.h  utility.h
src/system/: header.h  parser.h  ticket_system.h  train_system.h  user_system.h
